--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "15.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-hot-toast": "^2.5.2"
+    "react-hot-toast": "^2.5.2",
+    "svix": "^1.62.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
