--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.12.5",
     "@prisma/client": "^6.5.0",
+    "axios": "^1.8.4",
     "localtunnel": "^2.0.2",
     "next": "15.2.2",
     "react": "^19.0.0",
